php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27145 property names are not unmangled when printed
Submitted: 2004-02-04 11:03 UTC Modified: 2004-02-04 21:11 UTC
From: andrey@php.net Assigned: iliaa (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2004-02-04 (dev) OS: linux
Private report: No CVE-ID: None
 [2004-02-04 11:03 UTC] andrey@php.net
Description:
------------
Object property name is not unmangled before printing in an compile error.

Reproduce code:
---------------
php -r 'class a { protected static $v = "aa";} class b extends a{ protected static $v="bb";}'

Expected result:
----------------
PHP Fatal error:  Cannot redeclare property static protected a::$v in class b in Command line code on line 1

Actual result:
--------------
PHP Fatal error:  Cannot redeclare property static protected a::$ in class b in Command line code on line 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-04 21:11 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 00:00:02 2026 UTC