Fixed bug #27145 (Unmangle private/protected property names before printing then inside error messages).